# bring

./: .coveragerc  .cruft.json  .frkl.yaml  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements-testing.txt  requirements-win.txt  requirements.txt  requirements_build.txt  setup.cfg  setup.py  tox.ini
.bring/: this.idx.br
.bring/pkgs/: bring.pkg.br
.frkl/: project.yaml
.github/workflows/: build-linux.yaml  build-mac-osx.yaml
api-documentation/: index.html
binary_build/: build.sh  onefile.spec
ci/build-binary/: requirements-build.txt
ci/build-binary/linux/: github-build-linux-binary.sh  requirements-build.txt
ci/docker/: Dockerfile
ci/docs/: __init__.py
ci/gitlab/release/: binaries.yml  container.yml  update_index.yml
ci/gitlab/test/: commitlint.yml  coverage.yml  flake8.yml  mypy.yml  safety.yml  tox.yml
docker/: Dockerfile  bring-update-context.sh  bring-update-index.sh  bring-update-repo.sh
docs/: getting-started.md  index.md  install.md  quick-start.md  usage.md
docs/documentation/: getting-help.md  install.md  overview.md
docs/documentation/plugins/: package-types.md
docs/overrides/: landing.html  no_left_nav.html
docs/reference/: contexts.md  indexes.md
docs/stylesheets/: extra.css
docs/usage/: getting-started.md
documentation/getting-help/: index.html
documentation/indexes/overview/: index.html
documentation/install/: index.html
documentation/overview/: index.html
documentation/plugins/mogrifiers/: index.html
getting-started/: index.html
scripts/: bring
scripts/build-binary/: build.sh  onefile.spec
scripts/install/: bring.sh
search/: search_index.json
src/bring/: __init__.py  _meta.py  bing_list.py  bring.py  bring_list.py  bringins.py  config.py  context.py  defaults.py  pkg.py  pkgs.py  utils.py
src/bring/artefact_handlers/: __init__.py  archive.py  file.py  folder.py
src/bring/assembly/: __init__.py  utils.py
src/bring/bring_target/: __init__.py  local_folder.py
src/bring/config/: __init__.py  bring_config.py  folder_config.py
src/bring/context/: __init__.py  context_config.py  dynamic_context.py  static_context.py  utils.py
src/bring/display/: args.py  args_explanation.py  explanation.py  info.py  local_folder.py
src/bring/doc/: args.py  index.py  local_folder.py  pkg.py  pkg_type.py  plugins.py
src/bring/file_sets/: __init__.py  default.py
src/bring/frecklets/: __init__.py  install_assembly.py  install_pkg.py  template.py
src/bring/indexes/: __init__.py
src/bring/interfaces/: cli.py
src/bring/merge_strategy/: __init__.py  bring.py  default.py  explanation.py  overwrite.py  replace.py  tracked.py
src/bring/merging/: __init__.py
src/bring/metadata/: __init__.py  subfolder.py
src/bring/mogrify/: __init__.py  archive.py  dict_patch.py  download.py  download_multiple_files.py  extract.py  file.py  file_filter.py  flatten.py  folder.py  git_archive.py  git_clone.py  helm_template.py  install.py  merge.py  merge_folders.py  merge_into.py  move_to_subfolder.py  parallel_pkg_merge.py  pick_subfolder.py  pkg_content.py  rename.py  set_mode.py  template.py  transform_folder.py
src/bring/pkg/: __init__.py
src/bring/pkg_index/: __init__.py  config.py  factory.py  folder_index.py  github_user_index.py  gitlab_user_index.py  gitservice_user_index.py  index.py  index_config.py  pkg.py  pkgs.py  static_index.py  utils.py
src/bring/pkg_processing/: __init__.py  explanations.py  install.py  processor.py  vars.py
src/bring/pkg_resolvers/: __init__.py  auto.py  bring_pkg.py  bring_pkgs.py  folder.py  git_repo.py  github_release.py  template_url.py
src/bring/pkg_types/: __init__.py  bring_pkg.py  bring_pkg.py.bak  bring_pkgs.py  bring_pkgs.py.bak  folder.py  git_files.py  git_repo.py  github_files.py  github_release.py  template_url.py
src/bring/plugins/: cli.py
src/bring/resources/: bring.tings  pkg_desc.j2  pkg_desc_github_release.j2
src/bring/target_folder/: __init__.py
src/bring/transform/: __init__.py  file_filter.py  merge.py
src/bring/utils/: __init__.py  args.py  bring_ins.py  contexts.py  defaults.py  doc.py  git.py  github.py  gitlab.py  indexes.py  merge_folders.py  merging.py  paths.py  pkg_spec.py  pkgs.py  system_info.py
src/freckles/core/: defaults.py  explanation.py  freckles.py  (+3 more)
stylesheets/: extra.css
tests/: conftest.py  test_bring.py  test_transmogrifier.py
(+34 files in other folders)
