# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = bring
description = A package manager for files.
author = Markus Binsteiner
author-email = markus@frkl.io
license = "The Parity Public License 6.0.0"
url = https://gitlab.com/frkl/bring
long-description = file: README.md
long-description-content-type = text/markdown
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    tings
    click-aliases>=1.0.1
    pydriller==1.10.1
    aiographql-client==0.4.0
    httpx==0.11.1
    pathspec==0.7.0
    blessings==1.7
    uvloop==0.14.0
    treelib==1.6.1

python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

develop =
    flake8
    ipython
    black
    pip-tools
    pre-commit
    watchdog
    wheel
    pipdeptree
    isort
    setuptools_scm
    cruft
    pp-ez
    nuitka
    mypy

docs =
    portray
    livereload
    formic2

[options.entry_points]
console_scripts =
    bring = bring.interfaces.cli:cli

tings.properties =

   bring-parents = bring.bring:BringParents
   lookup-data = bring.bring:LookupData


[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov bring --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
pep8maxlinelength = 88


[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = sdist, bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    .git
    __pycache__
ignore = F405, W503, E501
max-line-length = 88

[importanize]
after_imports_new_lines=2
length=88
exclude=
    .tox/*
groups=
    stdlib
    sitepackages
    remainder
    local

[mypy]
python_version = 3.8

[mypy-pathspec]
ignore_missing_imports = true

[mypy-treelib]
ignore_missing_imports = true

[mypy-blessings]
ignore_missing_imports = true

[mypy-appdirs]
ignore_missing_imports = true

[mypy-pubsub]
ignore_missing_imports = true

[mypy-pubsub.core]
ignore_missing_imports = true

[mypy-pubsub.core.topicargspec]
ignore_missing_imports = true

[mypy-asyncclick]
ignore_missing_imports = true

[mypy-asyncclick.core]
ignore_missing_imports = true

[mypy-watchgod]
ignore_missing_imports = true

[mypy-ruamel]
ignore_missing_imports = true

[mypy-sortedcontainers]
ignore_missing_imports = true

[mypy-arrow]
ignore_missing_imports = true

[mypy-prompt_toolkit]
ignore_missing_imports = true

[mypy-git]
ignore_missing_imports = true

[mypy-pydriller]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true
